# zephyr-xenlib

./: CMakeLists.txt  Kconfig  README.md
.github/workflows/: build.yaml
docs/: CMakeLists.txt  Doxyfile.in  FindSphinx.cmake  conf.py  index.rst
docs/api/: domain_ctrl.rst  index.rst  xenstore_xss.rst
include/xen/public/: arch-arm.h  domctl.h  event_channel.h  grant_table.h  memory.h  xen-compat.h  xen.h
include/xen/public/hvm/: hvm_op.h  params.h  save.h
libfdt/: CMakeLists.txt  fdt_ro.c
tests/xrun/: CMakeLists.txt  prj.conf
tests/xrun/include/: domain.h  xen_dom_mgmt.h
tests/xrun/src/: mock-xen-dom-mgmt.c
vch/: CMakeLists.txt
vch/include/: vch.h
vch/include/xen/public/io/: libxenvchan.h
vch/src/: vch.c
xen-console-srv/: CMakeLists.txt
xen-console-srv/include/: xen_console.h
xen-console-srv/src/: xen_console.c
xen-dom-mgmt/: CMakeLists.txt  linker.ld
xen-dom-mgmt/include/: domain.h  mem-mgmt.h  uimage.h  xen-dom-fdt.h  xen-dom-xs.h  xen_dom_mgmt.h  xl_parser.h  zimage.h
xen-dom-mgmt/src/: mem-mgmt.c  xen-dom-fdt.c  xen-dom-mgmt.c  xen-dom-xs.c  xl_parser.c
xen-shell-cmd/: CMakeLists.txt
xen-shell-cmd/include/: xen_shell.h
xen-shell-cmd/src/: xen_cmds.c  xen_shell.c  xenstore_cli_cmds.c  xenstore_cmds.c  xstat_cmds.c
xenstore-cli/: CMakeLists.txt
xenstore-cli/include/: xenstore_cli.h
xenstore-cli/src/: xenstore_cli.c
xenstore-common/: CMakeLists.txt
xenstore-common/include/: xenstore_common.h
xenstore-common/src/: xenstore_common.c
xenstore-srv/: CMakeLists.txt
xenstore-srv/include/: xenstore_srv.h  xss.h
xenstore-srv/include/xen/public/io/: xs_wire.h
xenstore-srv/src/: xenstore_srv.c
xrun/: CMakeLists.txt  Kconfig
xrun/include/: storage.h  xrun.h
xrun/src/: storage.c  xrun.c
xstat/: CMakeLists.txt
xstat/include/: xstat.h
xstat/src/: xstat.c
zephyr/: module.yml
